# custom-search-engine

./: .gitignore  CHANGELOG.md  Main.hs  cabal.project  custom-search-engine.cabal
src/: CustomSearchEngine.hs
